@@ -1,3 +1,7 @@
+2009-12-07 Bahadır Kandemir <bahadir@pardus.org.tr>
+		* pisi/api.py, pisi/db/install.db, pisi/constants.py: Install DB
+		changes and API methods for needs{Restart,Reboot} feature.
+
 2009-12-04 Bahadır Kandemir <bahadir@pardus.org.tr>
 		* pisi/scenarioapi/pspec.py: Reverted AnyDependency changes.
 
